--- a/Лабораторна #N7/sources/index.html
+++ b/Лабораторна #N7/sources/index.html
@@ -3,28 +3,27 @@
    <head>
       <meta Charset="utf-8">
       <title>Сайт</title>
-	  <link rel ="stylesheet" href="css/main.css">
-	  <link rel ="stylesheet" href="css/carousel.css">
+      <link rel ="stylesheet" href="css/main.css">
+      <link rel ="stylesheet" href="css/carousel.css">
       <link rel ="stylesheet" href="css/slider.css">
-	  <meta name="viewport" content="width=device-width, initial-scale=1">
-	  <script src="./js/main.js"></script>
-
-	  <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
-	  <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <script src="./js/main.js"></script>
+      <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+      <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
       <!-- <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Playfair+Display" /> -->
    </head>
    <body>
-      <div class="home">
+      <div id="home" class="home">
          <div class="width-wrapper">
             <div class="nav">
                <a href="#" style="margin-right: 3vw;"><img src="resourses/header/logo.png" style="width: 100%;" alt="Bickeshop"></a>
-               <a>HOME</a>
-               <a href="#new">MENU</a>
-               <a href="#Reservaion">RESERVATION</a>
-               <a href="">RECEPIE</a> 
-               <a href="#about">BLOG</a> 
-               <a href="#about">PAGES</a> 
-               <a href="#about">CONTACT</a> 
+               <a href="#home">HOME</a>
+               <a href="#menu">MENU</a>
+               <a href="#reserve">RESERVATION</a>
+               <a href="#happy-clients">RECEPIE</a> 
+               <a href="#gallery">BLOG</a> 
+               <a href="#hours">PAGES</a> 
+               <a href="#contact">CONTACT</a> 
                <a href="#">
                <img alt="W3Schools" style="width: 100%;" src="resourses/header/cart.png" >
                </a>
@@ -32,7 +31,7 @@
                <img alt="W3Schools" style="width: 100%;" src="resourses/header/Book your table.png" >
                </a>
             </div>
-            <div class="headMiddle">
+            <div class="head-middle">
                <h1>Teast your fav dish</h1>
                <h2>from luxury restaurent.</h2>
                <img alt="W3Schools" style="width: 16%; margin-top: 5vw;" src="resourses/header/icon_phone.png" >
@@ -40,11 +39,11 @@
             </div>
          </div>
          <input type="image" id="image1" alt="arrow1"
-            class="verticalBitton1" src="./resourses/header/arrow1.png">
+            class="vertical-button1" src="./resourses/header/arrow1.png">
          <input type="image" id="image2" alt="arrow2"
-            class="verticalBitton2" src="./resourses/header/arrow2.png">
+            class="vertical-button2" src="./resourses/header/arrow2.png">
       </div>
-      <div class="menu">
+      <div id="menu" class="menu">
       <div class="width-wrapper">
          <div class="menu-wrapper">
             <div class="food-menu-wrapper">
@@ -112,13 +111,11 @@
                </div>
             </div>
          </div>
-	  </div>
-	  
+      </div>
       <div style="margin-bottom: 5vw">
          <div></div>
-	  </div>
-	  
-      <div class="form">
+      </div>
+      <div id="reserve" class="form">
          <img src="./resourses/form/Image293x293.png" id="floating-image1" alt="img1">
          <div class="width-wrapper">
             <form class="form-style-9">
@@ -151,36 +148,34 @@
             </form>
          </div>
          <img src="./resourses/form/Image241x234.png" id="floating-image2" alt="img2">
-	  </div>
-	  
-      <div class="happy-clients">
+      </div>
+      <div id="happy-clients" class="happy-clients">
          <div class="width-wrapper">
-
-			<h1>Happy Clients</h1>
+            <h1>Happy Clients</h1>
             <div class="reviews">
                <div class="slider">
                   <div class="slides">
                      <div id="slide-1">
                         <img src="./resourses/happy_clients/Image 269 x 295.png" alt="img3">
-						<h2>“</h2>
-						<div class="content">
+                        <h2>“</h2>
+                        <div class="content">
                            <h3>Best atmosphere and food</h3>
-                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                           <p>
+                              Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                               sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-							  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-							  <!-- У меня нет сил выбирать эту точку селекторами, пусть висит так -->
-							  <h2 style="  position: absolute;
-							  margin-left: 40vw;
-							  margin-top: -2vw;">
-							  „</h2> 
-						   </p>
-						  
-						   <hr>
-						   
-						   <div class="name-wrapper">
-								<h4>DR. PRABAKARAN JHON</h4>
-								<span>⭐⭐⭐⭐⭐</span>
-						   </div>
+                              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                              <!-- У меня нет сил выбирать эту точку селекторами, пусть висит так -->
+                           <h2 style="  position: absolute;
+                              margin-left: 40vw;
+                              margin-top: -2vw;">
+                              „
+                           </h2>
+                           </p>
+                           <hr>
+                           <div class="name-wrapper">
+                              <h4>DR. PRABAKARAN JHON</h4>
+                              <span>⭐⭐⭐⭐⭐</span>
+                           </div>
                         </div>
                      </div>
                      <div id="slide-2">
@@ -198,24 +193,92 @@
                </div>
             </div>
          </div>
-	  </div>
-
-	  
-	    <div class="gallery">
-			<h1> Our Gallery</h1>
-
-			<div class="gallery js-flickity"
-			data-flickity-options='{ "wrapAround": true }'>
-				<img src="./resourses/gallery/Image 370 x 340.png" class="gallery-cell" alt="img4">
-				<img src="./resourses/gallery/Image 471 x 340.png" class="gallery-cell" alt="img5">
-				<img src="./resourses/gallery/Image 471 x 340.png" class="gallery-cell" alt="img6">
-				<img src="./resourses/gallery/Image 370 x 340.png" class="gallery-cell" alt="img7">
-				<img src="./resourses/gallery/Image 471 x 340.png" class="gallery-cell" alt="img8">
-			</div>
-		</div>
-
-		<div style="margin-top: 10vw;">
-			aaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-		</div>
+      </div>
+      <div id="gallery" class="gallery">
+         <h1> Our Gallery</h1>
+         <div class="gallery js-flickity"
+            data-flickity-options='{ "wrapAround": true }'>
+            <img src="./resourses/gallery/Image 370 x 340.png" class="gallery-cell" alt="img4">
+            <img src="./resourses/gallery/Image 471 x 340.png" class="gallery-cell" alt="img5">
+            <img src="./resourses/gallery/Image 471 x 340.png" class="gallery-cell" alt="img6">
+            <img src="./resourses/gallery/Image 370 x 340.png" class="gallery-cell" alt="img7">
+            <img src="./resourses/gallery/Image 471 x 340.png" class="gallery-cell" alt="img8">
+         </div>
+      </div>
+      <div id="hours" class="upper-footer">
+         <div class="width-wrapper">
+            <div class="upper-footer-wrapper">
+               <h1> Opening Hours</h1>
+               <div>
+                  <div class="time">
+                     <p><i>Monday to Friday </i></p>
+                     <span>
+                        <b>
+                           10
+                           <h2>am</h2>
+                           - 10
+                           <h2>pm</h2>
+                        </b>
+                     </span>
+                  </div>
+                  <div class="time">
+                     <p><i>Saturday to Sunday </i></p>
+                     <span>
+                        <b>
+                           09
+                           <h2>am</h2>
+                           - 11
+                           <h2>pm</h2>
+                        </b>
+                     </span>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <img src="./resourses/footer/Image 210 x 210.png" id="floating-image3" alt="img3">
+      </div>
+      <div id="contact" class="page-footer">
+      <div class="width-wrapper">
+         <div class="page-footer-wrapper">
+            <div class="navigation">
+               <h3>Navigation</h3>
+               <a href="#new">Home</a>
+               <a href="#Reservaion">About us</a>
+               <a href="">Menu</a> 
+               <a href="#about">Reservation</a> 
+               <a href="#about">Recipe</a> 
+               <a href="#about">Blog</a> 
+               <a href="#about">Contact Us</a> 
+            </div>
+            <div class="news-letter">
+               <h3>News letter</h3>
+               <p>Enter your email address and subscribe daily newsletter</p>
+               <form action="/action_page.php">
+                  <input type="email" id="email-form" name="email" placeholder="Email Addres">
+                  <input type="submit" value=""/>
+               </form>
+               <!-- Это можно сделать с цсс, но я уже хочу убиться, 
+                  а из-за количества долгов - отчислиться, так что наспех так -->
+               <div class="social-networks">
+                  <a href="#"> <img src="./resourses/footer/icon_facebook.png" class="" alt="img4"> </a>
+                  <a href="#"> <img src="./resourses/footer/icon_twitter.png" class="" alt="img4"> </a>
+                  <a href="#"> <img src="./resourses/footer/icon_google+.png" class="" alt="img4"> </a>
+               </div>
+            </div>
+            <div class="our-apps">
+               <h3>Our app avalible</h3>
+               <input type="image" id="" alt="food-menue"
+                  class="get-app-buttons" src="./resourses/footer/Avilable on the App Store.png">
+               <input type="image" id="" alt="food-menue"
+                  class="get-app-buttons" src="./resourses/footer/Get it on Google Play.png">
+            </div>
+         </div>
+         <div class="hr-fotter">
+            <div class="separator">
+               <h4>2016©&ensp; <span>LUXURY RESTAURANT,</span> &ensp;ALL RIGHTS RESERVED</h4>
+            </div>
+         </div>
+      </div>
+      <div>
    </body>
 </html>
