Lab8, folder name changed, title name changed.

--- a/Лабораторна #N8/sources/index.html
+++ b/Лабораторна #N8/sources/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Title</title>
+    <title>Exchange Tracker</title>
     <script src="https://unpkg.com/rxjs/bundles/rxjs.umd.min.js"></script>
     <link rel="stylesheet" href="./css/style.css">
 </head>
